--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
 	"dependencies": {
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"lodash-es": "^4.17.21"
 	},
 	"scripts": {
-		"dev": "vite"
+		"dev": "vite",
+		"build": "vite build"
 	},
 	"devDependencies": {
 		"vite": "^7.0.5"
